test/Fail/Issue676.err
Issue676.agda:23.9-13: error: [UnequalTerms]
The terms
  unsillify (fail x)
and
  true
are not equal at type Bool
when checking that the expression refl has type
unsillify (fail x) ≡ true
